--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   cloud_firestore: ^3.1.14
+  firebase_core: ^1.16.0
+  firebase_auth: ^3.3.17
 
 dev_dependencies:
   flutter_test:
